Changes for 2.5.0

New features:
...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)

Bug fixes:
........S. [ZBX-8793] fixed processing of snmp value to represent it as integer (igors)
...G...... [ZBX-8837] added bypassing of dns resolver cache on windows systems for net.dns items (wiper)
A......... [ZBX-8660] fix API to disallow deleting of discovered entities (items, triggers, graphs, hosts) and add validation so that only allowed fields of discovered entities can be updated (Krists)
...G...PS. [ZBX-8728] changed item key parameter parsing to use dynamic buffers for parsed parameters (wiper)
..F....... [ZBX-8816] removed "clear history & trends" button from template web scenarios (arvids)
..F....... [ZBX-8693] fixed "Add" button in Configuration->Triggers->Create Trigger->Add for IE11 (arvids)
..F....... [ZBX-8713] improve screen element resource parameter labels (Krists)
..F....... [ZBX-8643] fixed performance problem in action configuration pages (Ivo)
...G...... [ZBX-8545] rewrote net.tcp.listen for Linux kernels 2.6.14 and above to employ the kernels NETLINK interface. Old method of information retrieval also improved (Juris)
...G...PS. [ZBX-8796] added get_process_info_by_thread() function prototype and renamed server_num, process_type and process_num local variables to eliminate conflict with the local ones (igors)
...G...PS. [ZBX-8763] fixed log message printing to syslog and undefined type log if debug level 5 is set (igors)
..F....... [ZBX-8671] fixed missing existence and permission checks for hosts and host groups (Krists)
..F....... [ZBX-7176] removed empty space in icon buttons (Ivo)
...G...PS. [ZBX-8736] added validation of timestamp values received by the server and sent via zabbix_sender (Juris)
..F....... [ZBX-8560] fixed web scenario HTTP proxy field placeholder content not fitting into input field (Ivo)